--- a/MinimalApi/appsettings.Development.json
+++ b/MinimalApi/appsettings.Development.json
@@ -6,6 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionString": "Server=localhost;Port=3307;Uid=root;Pwd=secret;Database=userdb;sslmode=none;",
+  "DevenvConnectionString": "Server=localhost;Port=3307;Uid=root;Pwd=secret;Database=userdb;sslmode=none;",
   "AllowedHosts": "*"
 }
