--- a/MinimalApi/appsettings.json
+++ b/MinimalApi/appsettings.json
@@ -6,6 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionString": "Server=devenv-db;Port=3306;Uid=root;Pwd=secret;Database=userdb;sslmode=none;",
+  "DevenvConnectionString": "Server=devenv-db;Port=3306;Uid=root;Pwd=secret;Database=userdb;sslmode=none;",
   "AllowedHosts": "*"
 }
